--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.13.2"
   }
 }
