--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,11 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.485.0",
     "next-themes": "^0.4.6",
+    "quill": "^2.0.3",
     "radix-ui": "^1.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "sonner": "^2.0.3",
