--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.485.0",
     "next-themes": "^0.4.6",
