--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "recharts": "^2.15.3",
     "stripe": "^18.2.1"
   }
 }
